@@ -1155,3 +1155,31 @@ penis	http://penis.to/#	20130816
 scms	http://ns.aksw.org/scms/annotations/	20130816
 sdo	http://schema.org/	20130816
 wapp	http://ns.rww.io/wapp#	20130816
+agrelon	http://d-nb.info/standards/elementset/agrelon#	20130924
+alchemy	http://rdf.alchemyapi.com/rdf/v1/s/aapi-schema#	20130924
+archdesc	http://archdesc.info/archEvent#	20130924
+cnt	http://www.w3.org/2011/content#	20130924
+co	http://rhizomik.net/ontologies/copyrightonto.owl#	20130924
+cosmo	http://purl.org/ontology/cosmo#	20130924
+cro	http://rhizomik.net/ontologies/copyrightonto.owl#	20130924
+dbpo	http://dbpedia.org/ontology/	20130924
+dt	http://dbpedia.org/datatype/	20130924
+frbrer	http://iflastandards.info/ns/fr/frbr/frbrer/	20130924
+frsad	http://iflastandards.info/ns/fr/frad/	20130924
+gndo	http://d-nb.info/standards/elementset/gnd#	20130924
+icane	http://www.icane.es/opendata/vocab#	20130924
+ludo	http://vocab.ox.ac.uk/ludo#	20130924
+oj	http://ontojob.at/	20130924
+oliasystem	http://purl.org/olia/system.owl#	20130924
+orca	http://geni-orca.renci.org/owl/topology.owl#	20130924
+saif	http://wwwiti.cs.uni-magdeburg.de/~srahman/	20130924
+sdmxa	http://purl.org/linked-data/sdmx/2009/attribute#	20130924
+sdmxd	http://purl.org/linked-data/sdmx/2009/dimension#	20130924
+sdo	http://salt.semanticauthoring.org/ontologies/sdo#	20130924
+stream	http://dbpedia.org/ontology/Stream/	20130924
+tsioc	http://rdfs.org/sioc/types#	20130924
+twaapi	http://purl.org/twc/vocab/aapi-schema#	20130924
+wd	http://www.wikidata.org/entity/	20130924
+who	http://www.who.int/vocab/ontology#	20130924
+wikidata	http://www.wikidata.org/entity/	20130924
+yago	http://yago-knowledge.org/resource/	20130924
